# OnvifDiscoveryLib

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  bootstrap.sh  configure.ac  onvifdisco.pc.in
example/: CMakeLists.txt  udp-test.c
src/: discovered_obj.c  discoverer.c  discoverer.h  onvif_discovery.c  onvif_discovery.h  probmatch.c  probmatch.h  udp-test.c
